<resources>
    <string name="app_name">Coffee Player</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="info_library">Library</string>
    <string name="info_all_tracks">All Tracks</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="empty_view_title">Nothing here</string>
    <string name="meta_album_art">Album Art</string>
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>

    // Preference
    <string name="pref_new_player">Use ExoPlayer instead of Android\'s default player. Try this is your have playback issues.</string>
    <string-array name="pref_app_start_list_titles">
        <item>Home</item>
        <item>Library</item>
    </string-array>

    <string-array name="pref_app_start_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_lib_start_list_titles">
        <item>Songs</item>
        <item>Albums</item>
        <item>Artists</item>
        <item>Folders</item>
        <item>Genres</item>
    </string-array>

    <string-array name="pref_lib_start_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    // Sort Actions
    <string name="action_sort_default">Default</string>
    <string name="action_sort_title">Title</string>
    <string name="action_sort_artist_name">Artist Name</string>
    <string name="action_sort_album_name">Album Name</string>
    <string name="action_sort_date_added">Date Added</string>
    <string name="action_sort_year">Year</string>
    <string name="action_sort_duration">Duration</string>
    <string name="action_sort_track">Track #</string>
    <string name="action_sort_ascending">Ascending</string>
    <string name="action_back">Back</string>
    <string name="action_next">Next</string>
    <string name="action_close">Close</string>
    <string name="info_songs">Songs</string>
    <string name="info_song">1 Song</string>
    <string name="info_album">Album</string>
    <string name="info_albums">Albums</string>
    <string name="info_upnext">UP NEXT</string>
    <string name="action_queue">Queue</string>
    <string name="info_listening">Listening</string>
    <string name="action_play_next">Play Next</string>
    <string name="action_go_to_album">Show Album</string>
    <string name="action_go_to_artist">Show Artist</string>
    <string name="action_add_to_playlist">Add to Playlist</string>
    <string name="action_edit">Edit Tags</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_to_favorites">Add to Favorites</string>
    <string name="action_share">Share</string>
    <string name="action_rem_from_favorites">Remove from Favorites</string>
    <string name="info_navigation">NAVIGATION</string>
    <string name="action_listening">Listening</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_library">Library</string>
    <string name="action_playlists">Playlists</string>
    <string name="action_equalizer">Equalizer</string>
    <string name="action_settings">Settings</string>
    <string name="info_playlists">Playlists</string>
    <string name="info_virtualizer">Virtualizer</string>
    <string name="info_bass_boost">Bass Boost</string>
    <string name="info_reverb">Reverb</string>
    <string name="action_enable">Enable</string>
    <string name="info_equalizer">Equalizer</string>
    <string name="info_favorites">Favorites</string>
    <string name="action_clear_queue">Clear Queue</string>
    <string name="info_title">Title</string>
    <string name="info_artist">Artist</string>
    <string name="info_track">Album Track #</string>
    <string name="info_disc">Disc #</string>
    <string name="info_genre">Genre</string>
    <string name="info_file_path">File Path</string>
    <string name="action_repeat_mode">Repeat Mode</string>
    <string name="info_zero_selected">0 Selected</string>
    <string name="info_search_hint">Search songs, albums or artists</string>
    <string name="info_artists">Artists</string>
    <string name="action_toggle_lyrics">Show/Hide Lyrics</string>
    <string name="msg_loading">Loading</string>
    <string name="msg_searching">Searching</string>
    <string name="msg_not_found">Lyrics Not Found</string>
    <string name="msg_connection_failed">Connection Failed</string>
    <string name="action_retry">Retry</string>
    <string name="msg_select_lyrics">SELECT LYRICS</string>
    <string name="action_rename">Rename</string>
    <string name="info_info">Info</string>
    <string name="msg_no_info_found">No Bio Found :(</string>
    <string name="action_delete_image">Delete Artist Image</string>
    <string name="action_select_image">Select an Artist Image</string>
    <string name="action_save">Save</string>
    <string name="info_edit">Edit</string>
    <string name="info_settinga">Settings</string>
    <string name="action_done">Done</string>
    <string name="info_theme">Theme</string>
    <string name="info_buttons">Buttons</string>
    <string name="info_opacity">Opacity</string>
    <string name="action_yt">View on YouTube</string>
    <string name="info_lyrics">Lyrics</string>
    <string name="info_lyrics_caps">LYRICS</string>
    <string name="action_more">More</string>
    <string name="action_collect_metadata">Collect Metadata</string>
    <string name="action_cancel">Cancel</string>
    <string name="grant_permission">Grant SD Card Permissions</string>
    <string name="action_ok">OK</string>
    <string name="action_select_from_gallery">Select Image</string>
    <string name="action_reset">Reset</string>
    <string name="action_size">Size</string>
    <string name="msg_sd_permission">Coffee Player need SD card permission to edit this song.\n\n
        • Step 1 - Select the popup menu.\n • Step 2 - Select \"Show SD card\".\n • Step 3 - Select \"SD card\".
    \n • Step 4 - Select \"SELECT SD card\".</string>
    <string name="action_give_permission">Give Permissions</string>
    <string name="info_name">Name</string>
    <string name="info_home">Home</string>
    <string name="action_home">Home</string>
    <string name="info_zero">0</string>
    <string name="action_refresh">Refresh</string>
    <string name="info_top_songs">Top Songs</string>
    <string name="info_top_albums">Top Albums</string>
    <string name="info_top_artists">Top Artists</string>
    <string name="info_recently_added">Recently Added</string>
    <string name="msg_home">Top songs, albums and artists with show up here\nTap above card to goto Library</string>
    <string name="msg_home_title">Hey! Welcome…</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="info_tracks">Tracks</string>
    <string name="action_add_lyrics">Add Lyrics</string>
    <string name="msg_add_lyrics">Add Lyrics</string>
    <string name="folder_sort">Folder Sort</string>
    <string name="song_sort">Song Sort</string>
    <string name="action_sort_song_count">Song Count</string>

</resources>
