<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/navigation_now_play"
            android:icon="@drawable/ic_play"
            android:title="@string/action_listening" />

        <item
            android:id="@+id/navigation_favorites"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/action_favorites"
            android:checkable="true"/>
        <!-- TODO Home - Uncomment -->
        <!--<item-->
            <!--android:id="@+id/navigation_home"-->
            <!--android:icon="@drawable/ic_home_white_24dp"-->
            <!--android:title="@string/action_home"-->
            <!--android:checkable="true"/>-->
        <item
            android:id="@+id/navigation_library"
            android:icon="@drawable/ic_library_music_white_24dp"
            android:title="@string/action_library"
            android:checkable="true"/>
        <item
            android:id="@+id/navigation_playlist"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/action_playlists"
            android:checkable="true"/>
        <item
            android:id="@+id/navigation_equalizer"
            android:icon="@drawable/ic_equalizer_white_24dp"
            android:title="@string/action_equalizer"
            android:checkable="true"/>
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/action_settings"/>
    </group>
</menu>