<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_white"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_default"
                    android:title="@string/action_sort_default"/>
                <item
                    android:id="@+id/action_sort_title"
                    android:title="@string/action_sort_title"/>
                <item
                    android:id="@+id/action_sort_ascending"
                    android:checkable="true"
                    android:checked="true"
                    android:title="@string/action_sort_ascending"/>
            </group>
        </menu>
    </item>
</menu>