<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editsongtitle"
            android:text="@string/info_title"/>
        <EditText
            android:id="@+id/editsongtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editsongartist"
            android:text="@string/info_artist"/>
        <EditText
            android:id="@+id/editsongartist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editsongalbum"
            android:text="@string/info_album"/>
        <EditText
            android:id="@+id/editsongalbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editsongalbumno"
            android:text="@string/info_track"/>

        <EditText
            android:id="@+id/editsongalbumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editsongdiscno"
            android:text="@string/info_disc"/>

        <EditText
            android:id="@+id/editsongdiscno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editsonggenre"
            android:text="@string/info_genre"/>
        <EditText
            android:id="@+id/editsonggenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editsongpath"
            android:text="@string/info_file_path"/>
        <EditText
            android:id="@+id/editsongpath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"/>
    </LinearLayout>
</ScrollView>