<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_equalizer"
        android:icon="@drawable/ic_equalizer_white_24dp"
        android:title="@string/action_equalizer"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_lyrics"
        android:icon="@drawable/ic_lyrics_white_24dp"
        android:title="@string/action_toggle_lyrics"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_queue"
        android:icon="@drawable/ic_queue_music_white_24dp"
        android:title="@string/action_queue"
        android:visible="true"
        app:showAsAction="always" />

</menu>