<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add_to_playlist"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        android:title="@string/action_add_to_playlist"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear_queue"
        android:icon="@drawable/ic_clear_all_white_24dp"
        android:title="@string/action_clear_queue"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_close"
        android:icon="@drawable/ic_close_white_24dp"
        android:title="@string/action_close"
        android:visible="true"
        app:showAsAction="always" />

</menu>