<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/folder_actionbar"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageButton
            android:id="@+id/folder_up"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_arrow_upward_white_24dp"
            android:background="?selectableItemBackgroundBorderless"/>

        <TextView
            android:id="@+id/folder_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/folder_up"
            android:layout_toRightOf="@+id/folder_up"
            android:layout_toStartOf="@+id/folder_play"
            android:layout_toLeftOf="@+id/folder_play"
            android:text="@string/app_name"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:textColor="?android:textColorSecondary"/>

        <Button
            android:id="@+id/folder_play"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_toLeftOf="@+id/folder_queue"
            android:layout_toStartOf="@+id/folder_queue"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="?android:textColorPrimary"
            android:textSize="12sp"
            android:text="@string/action_play"/>

        <Button
            android:id="@+id/folder_queue"
            android:layout_width="64dp"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="?android:textColorPrimary"
            android:textSize="12sp"
            android:text="@string/action_queue"/>

    </RelativeLayout>

    <com.udeshcoffee.android.recyclerview.EmptyRecyclerView
        android:id="@+id/folder_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/folder_actionbar"
        app:fastScrollPopupBgColor="@color/colorAccent"
        app:fastScrollPopupTextColor="@android:color/primary_text_dark"
        app:fastScrollThumbColor="@color/colorAccent"/>
    <include layout="@layout/empty_view" />

</RelativeLayout>
