<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent">

            <android.support.v7.widget.SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultQueryHint="@string/info_search_hint">

            </android.support.v7.widget.SearchView>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Specific -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_albums"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#777"
                android:textAllCaps="true"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/album_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:id="@+id/textView_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_artists"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#777"
                android:textAllCaps="true"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/artist_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:id="@+id/textView_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_songs"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#777"
                android:textAllCaps="true"/>

            <com.udeshcoffee.android.recyclerview.EmptyRecyclerView
                android:id="@+id/song_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                app:fastScrollPopupBgColor="@color/colorAccent"
                app:fastScrollPopupTextColor="@android:color/primary_text_dark"
                app:fastScrollThumbColor="@color/colorAccent"/>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/empty_view" />
</LinearLayout>