<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout_big"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:id="@+id/widget_layout_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="4dp">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_art" />

        <LinearLayout
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/album_art"
            android:layout_toRightOf="@+id/album_art"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fadingEdge="horizontal"
                android:maxLines="1"
                android:text="@string/info_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fadingEdge="horizontal"
                android:maxLines="1"
                android:text="@string/info_album"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fadingEdge="horizontal"
                android:maxLines="1"
                android:text="@string/info_artist"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/album_art"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageButton
                android:id="@+id/prev_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_back" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_play" />

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_next" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>